--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,7 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy site
+        id: delpoy
         uses: ./.github/actions/deploy-s3-javascript
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -87,3 +88,6 @@ jobs:
           bucket: gh-custom-action-hosting-13321
           dist-folder: ./dist
           # bucket-region: us-east-1
+      - name: Output information
+        run: |
+          echo "Live URL: ${{ steps.delpoy.outputs.website-url }}"
